# welcome

./: README.md
.github/workflows/: update-task-progress.yml
assets/: requirements.txt  update-task-progress.py
course/: README.md
course/docs/: README.md
members/: bbb.json
submissions/: README.md  张海涛  张琳浩  徐小雅  梁俊杰  王祉航  蔡思妍  解宸豪  赵巳汗  邵嘉睿  郑恩龙  黄永兴
submissions/李万宇/task2/: CMakeLists.txt  README.md
submissions/李万宇/task2/inc/: attendance.h  manage.h  person.h
submissions/李万宇/task2/src/: CMakeLists.txt  attendance.cpp  manage.cpp  person.cpp
submissions/段俊浩/task 2/cmake1/CMakeTest/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CMakeTest.sln  MyExecutable.vcxproj  MyProject.vcxproj  MyProject.vcxproj.filters  Project.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
submissions/段俊浩/task 2/cmake1/CMakeTest/Inc/: member.h
submissions/段俊浩/task 2/cmake1/CMakeTest/Src/: main.cpp  member.cpp
submissions/段俊浩/task 2/cmake1/CMakeTest/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
submissions/段俊浩/task 2/cmake1/CMakeTest/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
submissions/段俊浩/task 2/cmake1/CMakeTest/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
submissions/段俊浩/task 2/cmake1/CMakeTest/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
submissions/赵羽丰/任务2/src/: CMakeLists.txt  control.cpp
submissions/赵羽丰/任务2/src/function/: CMakeLists.txt  teammanager.cpp  teammanager.h  workermanager.cpp  workermanager.h
submissions/邱阳/text3/: CMakeLists.txt
submissions/邱阳/text3/include/: attendance.h  members.h  team_manager.h
submissions/邱阳/text3/src/: attendance.cpp  main.cpp  members.cpp  team_manager.cpp
tasks/: 物料清单.md
(+168 files in other folders)
